Project WebAI {
  database_type: "PostgreSQL"
  Note: '''
  WebAI database design.
  Current landed tables:
  auth.users / profiles / conversations / messages / openai_compatible_models / gemini_models
  favorites and search_records stay in the overall design, but are not yet landed.
  '''
}

Enum conversation_status {
  active
  archived
}

Enum message_sender_type {
  user
  assistant
}

Table auth.users [headercolor: #D9EAFE] {
  id uuid [pk, not null, note: 'Supabase Auth user id']
  email varchar(255) [not null, unique]
  created_at timestamptz [not null, default: `now()`]

  Note: '''
  Authentication identity is provided by Supabase Auth.
  This table is referenced by business tables and should not be treated as a duplicated custom auth table.
  '''
}

Table profiles [headercolor: #EEF6FF] {
  user_id uuid [pk, not null, note: 'References auth.users.id']
  display_name varchar(100)
  avatar_url varchar(500)
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  Note: '''
  User-facing profile information for display and account entry.
  '''
}

Table conversations [headercolor: #CFE7FF] {
  id uuid [pk, not null]
  user_id uuid [not null]
  title varchar(100) [not null]
  system_prompt text [note: 'Conversation-level prompt, optional']
  status conversation_status [not null, default: 'active']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    user_id
    updated_at
    (user_id, status)
  }

  Note: '''
  Core conversation entity.
  Supports create, open, rename, delete and later archive/recover.
  '''
}

Table messages [headercolor: #B7DBFF] {
  id uuid [pk, not null]
  conversation_id uuid [not null]
  sender_type message_sender_type [not null]
  content text [not null]
  created_at timestamptz [not null, default: `now()`]

  indexes {
    conversation_id
    created_at
    (conversation_id, created_at)
  }

  Note: '''
  Stores user prompts and assistant replies.
  '''
}

Table favorites [headercolor: #F4F8FC] {
  id uuid [pk, not null]
  user_id uuid [not null]
  message_id uuid [not null]
  created_at timestamptz [not null, default: `now()`]

  indexes {
    user_id
    message_id
    (user_id, message_id) [unique]
  }

  Note: '''
  Extension entity for message favorites.
  Kept in the overall design and reserved for a later implementation batch.
  '''
}

Table search_records [headercolor: #F4F8FC] {
  id uuid [pk, not null]
  user_id uuid [not null]
  keyword varchar(100) [not null]
  created_at timestamptz [not null, default: `now()`]

  indexes {
    user_id
    created_at
  }

  Note: '''
  Extension entity for user search history.
  Kept in the overall design and reserved for a later implementation batch.
  '''
}

Table openai_compatible_models [headercolor: #F3F7FF] {
  id uuid [pk, not null]
  model_id varchar(120) [not null, unique]
  upstream_object varchar(50)
  owned_by varchar(120)
  upstream_created_at timestamptz
  label varchar(120) [not null]
  description text
  provider_name varchar(120) [not null, default: 'openai']
  base_url text
  api_style varchar(50) [not null, default: 'openai_compatible']
  supports_text boolean [not null, default: true]
  supports_image boolean [not null, default: false]
  supports_audio boolean [not null, default: false]
  supports_video boolean [not null, default: false]
  supports_web_search boolean [not null, default: false]
  supports_function_calling boolean [not null, default: false]
  supports_tools boolean [not null, default: false]
  supports_file_search boolean [not null, default: false]
  supports_structured_outputs boolean [not null, default: false]
  supports_streaming boolean [not null, default: true]
  supports_reasoning boolean [not null, default: false]
  context_window integer
  max_output_tokens integer
  is_enabled boolean [not null, default: true]
  is_default boolean [not null, default: false]
  sort_order integer [not null, default: 0]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    is_enabled
    (sort_order, label)
    (is_default) [unique]
  }

  Note: '''
  Registry table for OpenAI-compatible models.
  Used by the backend dispatch layer and future frontend model selector.
  '''
}

Table gemini_models [headercolor: #F3F7FF] {
  id uuid [pk, not null]
  name varchar(160) [not null, unique]
  base_model_id varchar(120)
  version varchar(120)
  display_name varchar(160) [not null]
  description text
  input_token_limit integer
  output_token_limit integer
  supported_generation_methods text[] [not null, default: '{}']
  thinking boolean
  temperature numeric(4,3)
  max_temperature numeric(4,3)
  top_p numeric(5,4)
  top_k integer
  api_style varchar(50) [not null, default: 'gemini_native']
  supports_text boolean [not null, default: true]
  supports_image boolean [not null, default: false]
  supports_audio boolean [not null, default: false]
  supports_video boolean [not null, default: false]
  supports_google_search boolean [not null, default: false]
  supports_url_context boolean [not null, default: false]
  supports_code_execution boolean [not null, default: false]
  supports_function_calling boolean [not null, default: false]
  supports_tools boolean [not null, default: false]
  supports_streaming boolean [not null, default: true]
  supports_reasoning boolean [not null, default: false]
  is_enabled boolean [not null, default: true]
  is_default boolean [not null, default: false]
  sort_order integer [not null, default: 0]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    is_enabled
    (sort_order, display_name)
    (is_default) [unique]
  }

  Note: '''
  Registry table for Gemini models and Gemini-specific capabilities.
  Used by the backend dispatch layer and future frontend model selector.
  '''
}

Ref: profiles.user_id - auth.users.id
Ref: conversations.user_id > auth.users.id
Ref: messages.conversation_id > conversations.id
Ref: favorites.user_id > auth.users.id
Ref: favorites.message_id > messages.id
Ref: search_records.user_id > auth.users.id
